--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -19,6 +19,8 @@
   list-style-type: none;
   font-size: 16px;
   text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
 }
 
 .navItemCurrent {
@@ -26,6 +28,7 @@
   list-style-type: none;
   font-size: 16px;
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 .navItem:hover {
@@ -47,7 +50,6 @@ li {
 .logoDot {
   width: 9px;
   height: 39px;
-  letter-spacing: 0;
   color: #5cdb95;
 }
 
