main navbar complete

--- a/src/components/hero/index.module.css
+++ b/src/components/hero/index.module.css
@@ -1,3 +1,7 @@
+.heroContainer {
+  margin-top: -75px;
+}
+
 .heroInnerWrapper {
   display: flex;
 }
@@ -5,7 +9,7 @@
 .horizontal {
   color: #ffffff;
   width: 80px;
-  margin-top: 125px;
+  margin-top: 200px;
   margin-left: 5px;
   margin-right: 0;
 }
