-banner responsive accross tablet and mid to large screen mobile

--- a/src/components/background/index.module.css
+++ b/src/components/background/index.module.css
@@ -24,3 +24,10 @@
   opacity: 0.15;
   margin-bottom: 500px;
 }
+
+@media (max-width: 425px) {
+  .backgroundWrapper {
+    top: -100px;
+    left: 175px;
+  }
+}
