--- a/src/components/hero/heroimage.module.css
+++ b/src/components/hero/heroimage.module.css
@@ -1,23 +1,22 @@
 .me {
   border-radius: 50%;
-  width: 280px;
-  height: 280px;
+  max-width: 280px;
+  max-height: 280px;
   border: 2px solid #777b80;
-  margin-left: 212px;
-  margin-top: 150px;
+  margin: 150px 0 0 212px;
 }
 
 @media (max-width: 1024px) {
   .me {
-    margin-left: 50px;
+    width: 240px;
+    height: 240px;
+    margin-left: 10px;
   }
 }
 
 @media (max-width: 769px) {
   .me {
     margin-left: 50px;
-    width: 140px;
-    height: 140px;
   }
 }
 
@@ -26,5 +25,17 @@
     margin-left: 75px;
     width: 280px;
     height: 280px;
+  }
+}
+
+@media (max-width: 375px) {
+  .me {
+    margin-left: 50px;
+  }
+}
+
+@media (max-width: 320px) {
+  .me {
+    margin-left: 15px;
   }
 }
