--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -86,6 +86,9 @@ li {
   .navItemCurrent {
     font-size: 14px;
   }
+  .navWrapper {
+    padding-left: 10px;
+  }
 }
 
 @media (max-width: 320px) {
