--- a/src/components/background-project-left/index.module.css
+++ b/src/components/background-project-left/index.module.css
@@ -10,11 +10,11 @@
   border: 2px dotted #ffffff;
   opacity: 0.05;
   margin-bottom: 20px;
+  width: 622px;
 }
 
 .hr2 {
   width: 622px;
-  /* height: 491px; */
   border-top: 2px solid #ffffff;
   border-bottom: none;
   border-right: none;
@@ -25,7 +25,7 @@
 @media (max-width: 769px) {
   .backgroundWrapper {
     top: 150px;
-    right: 50px;
+    right: 175px;
   }
 }
 
