--- a/src/components/background-project-right/index.module.css
+++ b/src/components/background-project-right/index.module.css
@@ -24,8 +24,8 @@
 
 @media (max-width: 769px) {
   .backgroundWrapper {
-    top: 150px;
-    right: 50px;
+    top: 175px;
+    left: 100px;
   }
 }
 
