--- a/src/components/pageHeadline/index.module.css
+++ b/src/components/pageHeadline/index.module.css
@@ -15,3 +15,9 @@
   font-size: 15px;
   text-transform: uppercase;
 }
+
+@media (max-width: 769px) {
+  .horizontal {
+    margin-left: 75px;
+  }
+}
