--- a/src/components/eventTimeline/index.module.css
+++ b/src/components/eventTimeline/index.module.css
@@ -87,3 +87,17 @@
     margin-top: 40px;
   }
 }
+
+@media (max-width: 320px) {
+  .timelineItem:nth-child(odd) {
+    margin-right: 85px;
+    width: 250px;
+  }
+  .timelineItem:nth-child(even) {
+    margin-left: 0px;
+    width: 250px;
+  }
+  .eventName {
+    font-size: 16px;
+  }
+}
